[FLINK-33359][FLINK-25002] add-opens jvm args to support jdk17 for kubernetes operator